// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Sidebar > Snapshot Tests > matches snapshot for sidebar with CTA 1`] = `
<nav
  aria-label="Navigation sidebar"
  class="w-64 flex h-full flex-col"
>
  <div
    class="h-full overflow-y-auto overflow-x-hidden rounded bg-surface-main px-3 py-4 dark:bg-secondary"
  >
    <div
      class="flex h-full flex-col"
    >
      <div
        class="flex-grow"
      >
        <div
          class="mt-6"
          data-testid="sidebar-cta"
        >
          <div
            data-testid="cta-content"
          >
            Call to Action
          </div>
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Sidebar > Snapshot Tests > matches snapshot for sidebar with active items 1`] = `
<nav
  aria-label="Navigation sidebar"
  class="w-64 flex h-full flex-col"
>
  <div
    class="h-full overflow-y-auto overflow-x-hidden rounded bg-surface-main px-3 py-4 dark:bg-secondary"
  >
    <div
      class="flex h-full flex-col"
    >
      <div
        class="flex-grow"
      >
        <div
          class=""
          data-testid="flowbite-sidebar-items"
        >
          <ul
            class="mt-4 space-y-2 border-t border-gray-200 pt-4 first:mt-0 first:border-t-0 first:pt-0 dark:border-gray-700"
            data-testid="flowbite-sidebar-item-group"
          >
            <div>
              <li
                class=""
              >
                <a
                  aria-labelledby="flowbite-sidebar-item-_r_1d_"
                  class="flex items-center justify-center rounded-lg p-2 pl-2 text-base font-normal hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700 text-brand-primary"
                  href="/home"
                >
                  <span
                    class="flex-1 whitespace-nowrap px-3"
                    data-testid="flowbite-sidebar-item-content"
                    id="flowbite-sidebar-item-_r_1d_"
                  >
                    <div
                      class="flex w-full items-center justify-between"
                    >
                      <span>
                        Home
                      </span>
                    </div>
                  </span>
                </a>
              </li>
            </div>
            <div>
              <li
                class=""
              >
                <a
                  aria-labelledby="flowbite-sidebar-item-_r_1e_"
                  class="flex items-center justify-center rounded-lg p-2 pl-2 text-base font-normal text-primary hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
                  href="/about"
                >
                  <span
                    class="flex-1 whitespace-nowrap px-3"
                    data-testid="flowbite-sidebar-item-content"
                    id="flowbite-sidebar-item-_r_1e_"
                  >
                    <div
                      class="flex w-full items-center justify-between"
                    >
                      <span>
                        About
                      </span>
                    </div>
                  </span>
                </a>
              </li>
            </div>
          </ul>
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Sidebar > Snapshot Tests > matches snapshot for sidebar with additional props 1`] = `
<nav
  aria-label="Navigation sidebar"
  class="w-64 flex h-full flex-col"
>
  <div
    class="h-full overflow-y-auto overflow-x-hidden rounded bg-surface-main px-3 py-4 dark:bg-secondary"
  >
    <div
      class="flex h-full flex-col"
    >
      <div
        class="flex-grow"
      />
    </div>
  </div>
</nav>
`;

exports[`Sidebar > Snapshot Tests > matches snapshot for sidebar with all props combined 1`] = `
<nav
  aria-label="Complete Sidebar"
  class="w-64 flex h-full flex-col"
>
  <div
    class="h-full overflow-y-auto overflow-x-hidden rounded bg-surface-main px-3 py-4 dark:bg-secondary"
  >
    <div
      class="flex h-full flex-col"
    >
      <div
        class="flex-grow"
      >
        <div
          class="mb-2"
          data-testid="sidebar-header"
        >
          <div
            data-testid="header-content"
          >
            Header
          </div>
        </div>
        <a
          aria-labelledby="flowbite-sidebar-logo-_r_24_"
          class="mb-5 flex items-center pl-2.5"
          href="/home"
        >
          <img
            alt="Brand Logo"
            class="mr-3 h-6 sm:h-7"
            src="/logo.png"
          />
          <span
            class="self-center whitespace-nowrap text-xl font-semibold dark:text-white"
            id="flowbite-sidebar-logo-_r_24_"
          >
            My Brand
          </span>
        </a>
        <div
          class=""
          data-testid="flowbite-sidebar-items"
        >
          <ul
            class="mt-4 space-y-2 border-t border-gray-200 pt-4 first:mt-0 first:border-t-0 first:pt-0 dark:border-gray-700"
            data-testid="flowbite-sidebar-item-group"
          >
            <div>
              <li
                class=""
              >
                <a
                  aria-labelledby="flowbite-sidebar-item-_r_25_"
                  class="flex items-center justify-center rounded-lg p-2 pl-2 text-base font-normal hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700 text-brand-primary"
                  href="/home"
                >
                  <div
                    data-testid="mock-icon"
                  >
                    Icon
                  </div>
                  <span
                    class="flex-1 whitespace-nowrap px-3"
                    data-testid="flowbite-sidebar-item-content"
                    id="flowbite-sidebar-item-_r_25_"
                  >
                    <div
                      class="flex w-full items-center justify-between"
                    >
                      <span>
                        Home
                      </span>
                    </div>
                  </span>
                </a>
              </li>
            </div>
            <div>
              <li
                class=""
              >
                <a
                  aria-labelledby="flowbite-sidebar-item-_r_26_"
                  class="flex items-center justify-center rounded-lg p-2 pl-2 text-base font-normal text-primary hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
                  href="/about"
                >
                  <div
                    data-testid="mock-icon"
                  >
                    Icon
                  </div>
                  <span
                    class="flex-1 whitespace-nowrap px-3"
                    data-testid="flowbite-sidebar-item-content"
                    id="flowbite-sidebar-item-_r_26_"
                  >
                    <div
                      class="flex w-full items-center justify-between"
                    >
                      <span>
                        About
                      </span>
                      <span
                        class="inline-flex h-6 min-w-[24px] items-center justify-center rounded-full px-2 text-xs font-medium bg-surface-gray-100 !text-gray-100 text-white"
                      >
                        5
                      </span>
                    </div>
                  </span>
                </a>
              </li>
            </div>
          </ul>
        </div>
        <div
          class="mt-6"
          data-testid="sidebar-cta"
        >
          <div
            data-testid="cta-content"
          >
            CTA
          </div>
        </div>
        <div
          data-testid="children-content"
        >
          Children
        </div>
      </div>
      <div
        class="flex-shrink-0"
        data-testid="sidebar-footer"
      >
        <div
          data-testid="footer-content"
        >
          Footer
        </div>
        <div
          class=""
          data-testid="flowbite-sidebar-items"
        >
          <ul
            class="mt-4 space-y-2 border-t border-gray-200 pt-4 first:mt-0 first:border-t-0 first:pt-0 dark:border-gray-700"
            data-testid="flowbite-sidebar-item-group"
          >
            <div>
              <li
                class=""
              >
                <a
                  aria-labelledby="flowbite-sidebar-item-_r_27_"
                  class="flex items-center justify-center rounded-lg p-2 pl-2 text-base font-normal text-primary hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
                  href="/help"
                >
                  <span
                    class="flex-1 whitespace-nowrap px-3"
                    data-testid="flowbite-sidebar-item-content"
                    id="flowbite-sidebar-item-_r_27_"
                  >
                    <div
                      class="flex w-full items-center justify-between"
                    >
                      <span>
                        Help
                      </span>
                    </div>
                  </span>
                </a>
              </li>
            </div>
            <div>
              <li
                class=""
              >
                <a
                  aria-labelledby="flowbite-sidebar-item-_r_28_"
                  class="flex items-center justify-center rounded-lg p-2 pl-2 text-base font-normal text-primary hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
                  href="/contact"
                >
                  <span
                    class="flex-1 whitespace-nowrap px-3"
                    data-testid="flowbite-sidebar-item-content"
                    id="flowbite-sidebar-item-_r_28_"
                  >
                    <div
                      class="flex w-full items-center justify-between"
                    >
                      <span>
                        Contact
                      </span>
                    </div>
                  </span>
                </a>
              </li>
            </div>
          </ul>
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Sidebar > Snapshot Tests > matches snapshot for sidebar with basic items 1`] = `
<nav
  aria-label="Navigation sidebar"
  class="w-64 flex h-full flex-col"
>
  <div
    class="h-full overflow-y-auto overflow-x-hidden rounded bg-surface-main px-3 py-4 dark:bg-secondary"
  >
    <div
      class="flex h-full flex-col"
    >
      <div
        class="flex-grow"
      >
        <div
          class=""
          data-testid="flowbite-sidebar-items"
        >
          <ul
            class="mt-4 space-y-2 border-t border-gray-200 pt-4 first:mt-0 first:border-t-0 first:pt-0 dark:border-gray-700"
            data-testid="flowbite-sidebar-item-group"
          >
            <div>
              <li
                class=""
              >
                <a
                  aria-labelledby="flowbite-sidebar-item-_r_19_"
                  class="flex items-center justify-center rounded-lg p-2 pl-2 text-base font-normal text-primary hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
                  href="/home"
                >
                  <span
                    class="flex-1 whitespace-nowrap px-3"
                    data-testid="flowbite-sidebar-item-content"
                    id="flowbite-sidebar-item-_r_19_"
                  >
                    <div
                      class="flex w-full items-center justify-between"
                    >
                      <span>
                        Home
                      </span>
                    </div>
                  </span>
                </a>
              </li>
            </div>
            <div>
              <li
                class=""
              >
                <a
                  aria-labelledby="flowbite-sidebar-item-_r_1a_"
                  class="flex items-center justify-center rounded-lg p-2 pl-2 text-base font-normal text-primary hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
                  href="/about"
                >
                  <span
                    class="flex-1 whitespace-nowrap px-3"
                    data-testid="flowbite-sidebar-item-content"
                    id="flowbite-sidebar-item-_r_1a_"
                  >
                    <div
                      class="flex w-full items-center justify-between"
                    >
                      <span>
                        About
                      </span>
                    </div>
                  </span>
                </a>
              </li>
            </div>
          </ul>
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Sidebar > Snapshot Tests > matches snapshot for sidebar with children 1`] = `
<nav
  aria-label="Navigation sidebar"
  class="w-64 flex h-full flex-col"
>
  <div
    class="h-full overflow-y-auto overflow-x-hidden rounded bg-surface-main px-3 py-4 dark:bg-secondary"
  >
    <div
      class="flex h-full flex-col"
    >
      <div
        class="flex-grow"
      >
        <div
          data-testid="children-content"
        >
          Children Content
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Sidebar > Snapshot Tests > matches snapshot for sidebar with complex nested structure 1`] = `
<nav
  aria-label="Navigation sidebar"
  class="w-64 flex h-full flex-col"
>
  <div
    class="h-full overflow-y-auto overflow-x-hidden rounded bg-surface-main px-3 py-4 dark:bg-secondary"
  >
    <div
      class="flex h-full flex-col"
    >
      <div
        class="flex-grow"
      >
        <div
          class=""
          data-testid="flowbite-sidebar-items"
        >
          <ul
            class="mt-4 space-y-2 border-t border-gray-200 pt-4 first:mt-0 first:border-t-0 first:pt-0 dark:border-gray-700"
            data-testid="flowbite-sidebar-item-group"
          >
            <div>
              <li
                class=""
              >
                <a
                  aria-labelledby="flowbite-sidebar-item-_r_20_"
                  class="flex items-center justify-center rounded-lg p-2 pl-2 text-base font-normal hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700 text-brand-primary"
                  href="/dashboard"
                >
                  <div
                    data-testid="mock-icon"
                  >
                    Icon
                  </div>
                  <span
                    class="flex-1 whitespace-nowrap px-3"
                    data-testid="flowbite-sidebar-item-content"
                    id="flowbite-sidebar-item-_r_20_"
                  >
                    <div
                      class="flex w-full items-center justify-between"
                    >
                      <span>
                        Dashboard
                      </span>
                    </div>
                  </span>
                </a>
              </li>
            </div>
            <div>
              <li>
                <button
                  class="group flex w-full items-center rounded-lg p-2 text-base font-normal text-gray-900 transition duration-75 hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
                  id="flowbite-sidebar-collapse-_r_21_"
                  title="Settings"
                  type="button"
                >
                  <div
                    data-testid="mock-icon"
                  >
                    Icon
                  </div>
                  <span
                    class="ml-3 flex-1 whitespace-nowrap text-left"
                    data-testid="flowbite-sidebar-collapse-label"
                  >
                    Settings
                  </span>
                  <svg
                    aria-hidden="true"
                    class="h-6 w-6 transition delay-0 ease-in-out"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 20 20"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
                <ul
                  aria-labelledby="flowbite-sidebar-collapse-_r_21_"
                  class="space-y-2 py-2"
                  hidden=""
                >
                  <div>
                    <li
                      class=""
                    >
                      <a
                        aria-labelledby="flowbite-sidebar-item-_r_22_"
                        class="flex items-center justify-center rounded-lg p-2 text-base font-normal text-primary hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700 group w-full pl-8 transition duration-75"
                        href="/profile"
                      >
                        <div
                          data-testid="mock-icon"
                        >
                          Icon
                        </div>
                        <span
                          class="flex-1 whitespace-nowrap px-3"
                          data-testid="flowbite-sidebar-item-content"
                          id="flowbite-sidebar-item-_r_22_"
                        >
                          <div
                            class="flex w-full items-center justify-between"
                          >
                            <span>
                              Profile
                            </span>
                            <span
                              class="inline-flex h-6 min-w-[24px] items-center justify-center rounded-full px-2 text-xs font-medium bg-surface-gray-100 !text-gray-100 text-white"
                            >
                              New
                            </span>
                          </div>
                        </span>
                      </a>
                    </li>
                  </div>
                  <div>
                    <li
                      class=""
                    >
                      <a
                        aria-labelledby="flowbite-sidebar-item-_r_23_"
                        class="flex items-center justify-center rounded-lg p-2 text-base font-normal text-primary hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700 group w-full pl-8 transition duration-75"
                        disabled=""
                        href="/account"
                      >
                        <div
                          data-testid="mock-icon"
                        >
                          Icon
                        </div>
                        <span
                          class="flex-1 whitespace-nowrap px-3"
                          data-testid="flowbite-sidebar-item-content"
                          id="flowbite-sidebar-item-_r_23_"
                        >
                          <div
                            class="flex w-full items-center justify-between"
                          >
                            <span>
                              Account
                            </span>
                          </div>
                        </span>
                      </a>
                    </li>
                  </div>
                </ul>
              </li>
            </div>
          </ul>
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Sidebar > Snapshot Tests > matches snapshot for sidebar with custom aria-label 1`] = `
<nav
  aria-label="Custom sidebar"
  class="w-64 flex h-full flex-col"
>
  <div
    class="h-full overflow-y-auto overflow-x-hidden rounded bg-surface-main px-3 py-4 dark:bg-secondary"
  >
    <div
      class="flex h-full flex-col"
    >
      <div
        class="flex-grow"
      />
    </div>
  </div>
</nav>
`;

exports[`Sidebar > Snapshot Tests > matches snapshot for sidebar with default props 1`] = `
<nav
  aria-label="Navigation sidebar"
  class="w-64 flex h-full flex-col"
>
  <div
    class="h-full overflow-y-auto overflow-x-hidden rounded bg-surface-main px-3 py-4 dark:bg-secondary"
  >
    <div
      class="flex h-full flex-col"
    >
      <div
        class="flex-grow"
      />
    </div>
  </div>
</nav>
`;

exports[`Sidebar > Snapshot Tests > matches snapshot for sidebar with disabled items 1`] = `
<nav
  aria-label="Navigation sidebar"
  class="w-64 flex h-full flex-col"
>
  <div
    class="h-full overflow-y-auto overflow-x-hidden rounded bg-surface-main px-3 py-4 dark:bg-secondary"
  >
    <div
      class="flex h-full flex-col"
    >
      <div
        class="flex-grow"
      >
        <div
          class=""
          data-testid="flowbite-sidebar-items"
        >
          <ul
            class="mt-4 space-y-2 border-t border-gray-200 pt-4 first:mt-0 first:border-t-0 first:pt-0 dark:border-gray-700"
            data-testid="flowbite-sidebar-item-group"
          >
            <div>
              <li
                class=""
              >
                <a
                  aria-labelledby="flowbite-sidebar-item-_r_1f_"
                  class="flex items-center justify-center rounded-lg p-2 pl-2 text-base font-normal text-primary hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
                  disabled=""
                  href="/home"
                >
                  <span
                    class="flex-1 whitespace-nowrap px-3"
                    data-testid="flowbite-sidebar-item-content"
                    id="flowbite-sidebar-item-_r_1f_"
                  >
                    <div
                      class="flex w-full items-center justify-between"
                    >
                      <span>
                        Home
                      </span>
                    </div>
                  </span>
                </a>
              </li>
            </div>
            <div>
              <li
                class=""
              >
                <a
                  aria-labelledby="flowbite-sidebar-item-_r_1g_"
                  class="flex items-center justify-center rounded-lg p-2 pl-2 text-base font-normal text-primary hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
                  href="/about"
                >
                  <span
                    class="flex-1 whitespace-nowrap px-3"
                    data-testid="flowbite-sidebar-item-content"
                    id="flowbite-sidebar-item-_r_1g_"
                  >
                    <div
                      class="flex w-full items-center justify-between"
                    >
                      <span>
                        About
                      </span>
                    </div>
                  </span>
                </a>
              </li>
            </div>
          </ul>
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Sidebar > Snapshot Tests > matches snapshot for sidebar with disabled nested items 1`] = `
<nav
  aria-label="Navigation sidebar"
  class="w-64 flex h-full flex-col"
>
  <div
    class="h-full overflow-y-auto overflow-x-hidden rounded bg-surface-main px-3 py-4 dark:bg-secondary"
  >
    <div
      class="flex h-full flex-col"
    >
      <div
        class="flex-grow"
      >
        <div
          class=""
          data-testid="flowbite-sidebar-items"
        >
          <ul
            class="mt-4 space-y-2 border-t border-gray-200 pt-4 first:mt-0 first:border-t-0 first:pt-0 dark:border-gray-700"
            data-testid="flowbite-sidebar-item-group"
          >
            <div>
              <li>
                <button
                  class="group flex w-full items-center rounded-lg p-2 text-base font-normal text-gray-900 transition duration-75 hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
                  disabled=""
                  id="flowbite-sidebar-collapse-_r_1p_"
                  title="Settings"
                  type="button"
                >
                  <span
                    class="ml-3 flex-1 whitespace-nowrap text-left"
                    data-testid="flowbite-sidebar-collapse-label"
                  >
                    Settings
                  </span>
                  <svg
                    aria-hidden="true"
                    class="h-6 w-6 transition delay-0 ease-in-out"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 20 20"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
                <ul
                  aria-labelledby="flowbite-sidebar-collapse-_r_1p_"
                  class="space-y-2 py-2"
                  hidden=""
                >
                  <div>
                    <li
                      class=""
                    >
                      <a
                        aria-labelledby="flowbite-sidebar-item-_r_1q_"
                        class="flex items-center justify-center rounded-lg p-2 text-base font-normal text-primary hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700 group w-full pl-8 transition duration-75"
                        href="/profile"
                      >
                        <span
                          class="flex-1 whitespace-nowrap px-3"
                          data-testid="flowbite-sidebar-item-content"
                          id="flowbite-sidebar-item-_r_1q_"
                        >
                          <div
                            class="flex w-full items-center justify-between"
                          >
                            <span>
                              Profile
                            </span>
                          </div>
                        </span>
                      </a>
                    </li>
                  </div>
                  <div>
                    <li
                      class=""
                    >
                      <a
                        aria-labelledby="flowbite-sidebar-item-_r_1r_"
                        class="flex items-center justify-center rounded-lg p-2 text-base font-normal text-primary hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700 group w-full pl-8 transition duration-75"
                        href="/account"
                      >
                        <span
                          class="flex-1 whitespace-nowrap px-3"
                          data-testid="flowbite-sidebar-item-content"
                          id="flowbite-sidebar-item-_r_1r_"
                        >
                          <div
                            class="flex w-full items-center justify-between"
                          >
                            <span>
                              Account
                            </span>
                          </div>
                        </span>
                      </a>
                    </li>
                  </div>
                </ul>
              </li>
            </div>
          </ul>
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Sidebar > Snapshot Tests > matches snapshot for sidebar with empty footer items array 1`] = `
<nav
  aria-label="Navigation sidebar"
  class="w-64 flex h-full flex-col"
>
  <div
    class="h-full overflow-y-auto overflow-x-hidden rounded bg-surface-main px-3 py-4 dark:bg-secondary"
  >
    <div
      class="flex h-full flex-col"
    >
      <div
        class="flex-grow"
      />
      <div
        class="flex-shrink-0"
        data-testid="sidebar-footer"
      >
        <div
          class=""
          data-testid="flowbite-sidebar-items"
        >
          <ul
            class="mt-4 space-y-2 border-t border-gray-200 pt-4 first:mt-0 first:border-t-0 first:pt-0 dark:border-gray-700"
            data-testid="flowbite-sidebar-item-group"
          />
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Sidebar > Snapshot Tests > matches snapshot for sidebar with empty items array 1`] = `
<nav
  aria-label="Navigation sidebar"
  class="w-64 flex h-full flex-col"
>
  <div
    class="h-full overflow-y-auto overflow-x-hidden rounded bg-surface-main px-3 py-4 dark:bg-secondary"
  >
    <div
      class="flex h-full flex-col"
    >
      <div
        class="flex-grow"
      />
    </div>
  </div>
</nav>
`;

exports[`Sidebar > Snapshot Tests > matches snapshot for sidebar with empty string hrefs 1`] = `
<nav
  aria-label="Navigation sidebar"
  class="w-64 flex h-full flex-col"
>
  <div
    class="h-full overflow-y-auto overflow-x-hidden rounded bg-surface-main px-3 py-4 dark:bg-secondary"
  >
    <div
      class="flex h-full flex-col"
    >
      <div
        class="flex-grow"
      >
        <div
          class=""
          data-testid="flowbite-sidebar-items"
        >
          <ul
            class="mt-4 space-y-2 border-t border-gray-200 pt-4 first:mt-0 first:border-t-0 first:pt-0 dark:border-gray-700"
            data-testid="flowbite-sidebar-item-group"
          >
            <div>
              <li
                class=""
              >
                <a
                  aria-labelledby="flowbite-sidebar-item-_r_2g_"
                  class="flex items-center justify-center rounded-lg p-2 pl-2 text-base font-normal text-primary hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
                  href=""
                >
                  <span
                    class="flex-1 whitespace-nowrap px-3"
                    data-testid="flowbite-sidebar-item-content"
                    id="flowbite-sidebar-item-_r_2g_"
                  >
                    <div
                      class="flex w-full items-center justify-between"
                    >
                      <span>
                        Home
                      </span>
                    </div>
                  </span>
                </a>
              </li>
            </div>
            <div>
              <li
                class=""
              >
                <a
                  aria-labelledby="flowbite-sidebar-item-_r_2h_"
                  class="flex items-center justify-center rounded-lg p-2 pl-2 text-base font-normal text-primary hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
                  href="/about"
                >
                  <span
                    class="flex-1 whitespace-nowrap px-3"
                    data-testid="flowbite-sidebar-item-content"
                    id="flowbite-sidebar-item-_r_2h_"
                  >
                    <div
                      class="flex w-full items-center justify-between"
                    >
                      <span>
                        About
                      </span>
                    </div>
                  </span>
                </a>
              </li>
            </div>
          </ul>
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Sidebar > Snapshot Tests > matches snapshot for sidebar with empty string labels 1`] = `
<nav
  aria-label="Navigation sidebar"
  class="w-64 flex h-full flex-col"
>
  <div
    class="h-full overflow-y-auto overflow-x-hidden rounded bg-surface-main px-3 py-4 dark:bg-secondary"
  >
    <div
      class="flex h-full flex-col"
    >
      <div
        class="flex-grow"
      >
        <div
          class=""
          data-testid="flowbite-sidebar-items"
        >
          <ul
            class="mt-4 space-y-2 border-t border-gray-200 pt-4 first:mt-0 first:border-t-0 first:pt-0 dark:border-gray-700"
            data-testid="flowbite-sidebar-item-group"
          >
            <div>
              <li
                class=""
              >
                <a
                  aria-labelledby="flowbite-sidebar-item-_r_2e_"
                  class="flex items-center justify-center rounded-lg p-2 pl-2 text-base font-normal text-primary hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
                  href="/empty"
                >
                  <span
                    class="flex-1 whitespace-nowrap px-3"
                    data-testid="flowbite-sidebar-item-content"
                    id="flowbite-sidebar-item-_r_2e_"
                  >
                    <div
                      class="flex w-full items-center justify-between"
                    >
                      <span />
                    </div>
                  </span>
                </a>
              </li>
            </div>
            <div>
              <li
                class=""
              >
                <a
                  aria-labelledby="flowbite-sidebar-item-_r_2f_"
                  class="flex items-center justify-center rounded-lg p-2 pl-2 text-base font-normal text-primary hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
                  href="/normal"
                >
                  <span
                    class="flex-1 whitespace-nowrap px-3"
                    data-testid="flowbite-sidebar-item-content"
                    id="flowbite-sidebar-item-_r_2f_"
                  >
                    <div
                      class="flex w-full items-center justify-between"
                    >
                      <span>
                        Normal
                      </span>
                    </div>
                  </span>
                </a>
              </li>
            </div>
          </ul>
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Sidebar > Snapshot Tests > matches snapshot for sidebar with footer content 1`] = `
<nav
  aria-label="Navigation sidebar"
  class="w-64 flex h-full flex-col"
>
  <div
    class="h-full overflow-y-auto overflow-x-hidden rounded bg-surface-main px-3 py-4 dark:bg-secondary"
  >
    <div
      class="flex h-full flex-col"
    >
      <div
        class="flex-grow"
      />
      <div
        class="flex-shrink-0"
        data-testid="sidebar-footer"
      >
        <div
          data-testid="footer-content"
        >
          Footer Content
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Sidebar > Snapshot Tests > matches snapshot for sidebar with footer content and footer items 1`] = `
<nav
  aria-label="Navigation sidebar"
  class="w-64 flex h-full flex-col"
>
  <div
    class="h-full overflow-y-auto overflow-x-hidden rounded bg-surface-main px-3 py-4 dark:bg-secondary"
  >
    <div
      class="flex h-full flex-col"
    >
      <div
        class="flex-grow"
      />
      <div
        class="flex-shrink-0"
        data-testid="sidebar-footer"
      >
        <div
          data-testid="footer-content"
        >
          Footer Content
        </div>
        <div
          class=""
          data-testid="flowbite-sidebar-items"
        >
          <ul
            class="mt-4 space-y-2 border-t border-gray-200 pt-4 first:mt-0 first:border-t-0 first:pt-0 dark:border-gray-700"
            data-testid="flowbite-sidebar-item-group"
          >
            <div>
              <li
                class=""
              >
                <a
                  aria-labelledby="flowbite-sidebar-item-_r_1u_"
                  class="flex items-center justify-center rounded-lg p-2 pl-2 text-base font-normal text-primary hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
                  href="/help"
                >
                  <span
                    class="flex-1 whitespace-nowrap px-3"
                    data-testid="flowbite-sidebar-item-content"
                    id="flowbite-sidebar-item-_r_1u_"
                  >
                    <div
                      class="flex w-full items-center justify-between"
                    >
                      <span>
                        Help
                      </span>
                    </div>
                  </span>
                </a>
              </li>
            </div>
            <div>
              <li
                class=""
              >
                <a
                  aria-labelledby="flowbite-sidebar-item-_r_1v_"
                  class="flex items-center justify-center rounded-lg p-2 pl-2 text-base font-normal text-primary hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
                  href="/contact"
                >
                  <span
                    class="flex-1 whitespace-nowrap px-3"
                    data-testid="flowbite-sidebar-item-content"
                    id="flowbite-sidebar-item-_r_1v_"
                  >
                    <div
                      class="flex w-full items-center justify-between"
                    >
                      <span>
                        Contact
                      </span>
                    </div>
                  </span>
                </a>
              </li>
            </div>
          </ul>
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Sidebar > Snapshot Tests > matches snapshot for sidebar with footer items 1`] = `
<nav
  aria-label="Navigation sidebar"
  class="w-64 flex h-full flex-col"
>
  <div
    class="h-full overflow-y-auto overflow-x-hidden rounded bg-surface-main px-3 py-4 dark:bg-secondary"
  >
    <div
      class="flex h-full flex-col"
    >
      <div
        class="flex-grow"
      />
      <div
        class="flex-shrink-0"
        data-testid="sidebar-footer"
      >
        <div
          class=""
          data-testid="flowbite-sidebar-items"
        >
          <ul
            class="mt-4 space-y-2 border-t border-gray-200 pt-4 first:mt-0 first:border-t-0 first:pt-0 dark:border-gray-700"
            data-testid="flowbite-sidebar-item-group"
          >
            <div>
              <li
                class=""
              >
                <a
                  aria-labelledby="flowbite-sidebar-item-_r_1s_"
                  class="flex items-center justify-center rounded-lg p-2 pl-2 text-base font-normal text-primary hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
                  href="/help"
                >
                  <span
                    class="flex-1 whitespace-nowrap px-3"
                    data-testid="flowbite-sidebar-item-content"
                    id="flowbite-sidebar-item-_r_1s_"
                  >
                    <div
                      class="flex w-full items-center justify-between"
                    >
                      <span>
                        Help
                      </span>
                    </div>
                  </span>
                </a>
              </li>
            </div>
            <div>
              <li
                class=""
              >
                <a
                  aria-labelledby="flowbite-sidebar-item-_r_1t_"
                  class="flex items-center justify-center rounded-lg p-2 pl-2 text-base font-normal text-primary hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
                  href="/contact"
                >
                  <span
                    class="flex-1 whitespace-nowrap px-3"
                    data-testid="flowbite-sidebar-item-content"
                    id="flowbite-sidebar-item-_r_1t_"
                  >
                    <div
                      class="flex w-full items-center justify-between"
                    >
                      <span>
                        Contact
                      </span>
                    </div>
                  </span>
                </a>
              </li>
            </div>
          </ul>
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Sidebar > Snapshot Tests > matches snapshot for sidebar with header 1`] = `
<nav
  aria-label="Navigation sidebar"
  class="w-64 flex h-full flex-col"
>
  <div
    class="h-full overflow-y-auto overflow-x-hidden rounded bg-surface-main px-3 py-4 dark:bg-secondary"
  >
    <div
      class="flex h-full flex-col"
    >
      <div
        class="flex-grow"
      >
        <div
          class="mb-2"
          data-testid="sidebar-header"
        >
          <div
            data-testid="header-content"
          >
            Header Content
          </div>
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Sidebar > Snapshot Tests > matches snapshot for sidebar with items with badges 1`] = `
<nav
  aria-label="Navigation sidebar"
  class="w-64 flex h-full flex-col"
>
  <div
    class="h-full overflow-y-auto overflow-x-hidden rounded bg-surface-main px-3 py-4 dark:bg-secondary"
  >
    <div
      class="flex h-full flex-col"
    >
      <div
        class="flex-grow"
      >
        <div
          class=""
          data-testid="flowbite-sidebar-items"
        >
          <ul
            class="mt-4 space-y-2 border-t border-gray-200 pt-4 first:mt-0 first:border-t-0 first:pt-0 dark:border-gray-700"
            data-testid="flowbite-sidebar-item-group"
          >
            <div>
              <li
                class=""
              >
                <a
                  aria-labelledby="flowbite-sidebar-item-_r_1h_"
                  class="flex items-center justify-center rounded-lg p-2 pl-2 text-base font-normal text-primary hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
                  href="/home"
                >
                  <span
                    class="flex-1 whitespace-nowrap px-3"
                    data-testid="flowbite-sidebar-item-content"
                    id="flowbite-sidebar-item-_r_1h_"
                  >
                    <div
                      class="flex w-full items-center justify-between"
                    >
                      <span>
                        Home
                      </span>
                      <span
                        class="inline-flex h-6 min-w-[24px] items-center justify-center rounded-full px-2 text-xs font-medium bg-surface-gray-100 !text-gray-100 text-white"
                      >
                        5
                      </span>
                    </div>
                  </span>
                </a>
              </li>
            </div>
            <div>
              <li
                class=""
              >
                <a
                  aria-labelledby="flowbite-sidebar-item-_r_1i_"
                  class="flex items-center justify-center rounded-lg p-2 pl-2 text-base font-normal text-primary hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
                  href="/about"
                >
                  <span
                    class="flex-1 whitespace-nowrap px-3"
                    data-testid="flowbite-sidebar-item-content"
                    id="flowbite-sidebar-item-_r_1i_"
                  >
                    <div
                      class="flex w-full items-center justify-between"
                    >
                      <span>
                        About
                      </span>
                      <span
                        class="inline-flex h-6 min-w-[24px] items-center justify-center rounded-full px-2 text-xs font-medium bg-surface-gray-100 !text-gray-100 text-white"
                      >
                        New
                      </span>
                    </div>
                  </span>
                </a>
              </li>
            </div>
          </ul>
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Sidebar > Snapshot Tests > matches snapshot for sidebar with items with icons 1`] = `
<nav
  aria-label="Navigation sidebar"
  class="w-64 flex h-full flex-col"
>
  <div
    class="h-full overflow-y-auto overflow-x-hidden rounded bg-surface-main px-3 py-4 dark:bg-secondary"
  >
    <div
      class="flex h-full flex-col"
    >
      <div
        class="flex-grow"
      >
        <div
          class=""
          data-testid="flowbite-sidebar-items"
        >
          <ul
            class="mt-4 space-y-2 border-t border-gray-200 pt-4 first:mt-0 first:border-t-0 first:pt-0 dark:border-gray-700"
            data-testid="flowbite-sidebar-item-group"
          >
            <div>
              <li
                class=""
              >
                <a
                  aria-labelledby="flowbite-sidebar-item-_r_1b_"
                  class="flex items-center justify-center rounded-lg p-2 pl-2 text-base font-normal text-primary hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
                  href="/home"
                >
                  <div
                    data-testid="mock-icon"
                  >
                    Icon
                  </div>
                  <span
                    class="flex-1 whitespace-nowrap px-3"
                    data-testid="flowbite-sidebar-item-content"
                    id="flowbite-sidebar-item-_r_1b_"
                  >
                    <div
                      class="flex w-full items-center justify-between"
                    >
                      <span>
                        Home
                      </span>
                    </div>
                  </span>
                </a>
              </li>
            </div>
            <div>
              <li
                class=""
              >
                <a
                  aria-labelledby="flowbite-sidebar-item-_r_1c_"
                  class="flex items-center justify-center rounded-lg p-2 pl-2 text-base font-normal text-primary hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
                  href="/about"
                >
                  <div
                    data-testid="mock-icon"
                  >
                    Icon
                  </div>
                  <span
                    class="flex-1 whitespace-nowrap px-3"
                    data-testid="flowbite-sidebar-item-content"
                    id="flowbite-sidebar-item-_r_1c_"
                  >
                    <div
                      class="flex w-full items-center justify-between"
                    >
                      <span>
                        About
                      </span>
                    </div>
                  </span>
                </a>
              </li>
            </div>
          </ul>
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Sidebar > Snapshot Tests > matches snapshot for sidebar with logo 1`] = `
<nav
  aria-label="Navigation sidebar"
  class="w-64 flex h-full flex-col"
>
  <div
    class="h-full overflow-y-auto overflow-x-hidden rounded bg-surface-main px-3 py-4 dark:bg-secondary"
  >
    <div
      class="flex h-full flex-col"
    >
      <div
        class="flex-grow"
      >
        <a
          aria-labelledby="flowbite-sidebar-logo-_r_16_"
          class="mb-5 flex items-center pl-2.5"
          href="/home"
        >
          <img
            alt="Brand Logo"
            class="mr-3 h-6 sm:h-7"
            src="/logo.png"
          />
          <span
            class="self-center whitespace-nowrap text-xl font-semibold dark:text-white"
            id="flowbite-sidebar-logo-_r_16_"
          >
            My Brand
          </span>
        </a>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Sidebar > Snapshot Tests > matches snapshot for sidebar with logo without href 1`] = `
<nav
  aria-label="Navigation sidebar"
  class="w-64 flex h-full flex-col"
>
  <div
    class="h-full overflow-y-auto overflow-x-hidden rounded bg-surface-main px-3 py-4 dark:bg-secondary"
  >
    <div
      class="flex h-full flex-col"
    >
      <div
        class="flex-grow"
      >
        <a
          aria-labelledby="flowbite-sidebar-logo-_r_17_"
          class="mb-5 flex items-center pl-2.5"
          href="#"
        >
          <img
            alt="Brand Logo"
            class="mr-3 h-6 sm:h-7"
            src="/logo.png"
          />
          <span
            class="self-center whitespace-nowrap text-xl font-semibold dark:text-white"
            id="flowbite-sidebar-logo-_r_17_"
          >
            My Brand
          </span>
        </a>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Sidebar > Snapshot Tests > matches snapshot for sidebar with logo without imgAlt 1`] = `
<nav
  aria-label="Navigation sidebar"
  class="w-64 flex h-full flex-col"
>
  <div
    class="h-full overflow-y-auto overflow-x-hidden rounded bg-surface-main px-3 py-4 dark:bg-secondary"
  >
    <div
      class="flex h-full flex-col"
    >
      <div
        class="flex-grow"
      >
        <a
          aria-labelledby="flowbite-sidebar-logo-_r_18_"
          class="mb-5 flex items-center pl-2.5"
          href="/home"
        >
          <img
            alt=""
            class="mr-3 h-6 sm:h-7"
            src="/logo.png"
          />
          <span
            class="self-center whitespace-nowrap text-xl font-semibold dark:text-white"
            id="flowbite-sidebar-logo-_r_18_"
          >
            My Brand
          </span>
        </a>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Sidebar > Snapshot Tests > matches snapshot for sidebar with long labels 1`] = `
<nav
  aria-label="Navigation sidebar"
  class="w-64 flex h-full flex-col"
>
  <div
    class="h-full overflow-y-auto overflow-x-hidden rounded bg-surface-main px-3 py-4 dark:bg-secondary"
  >
    <div
      class="flex h-full flex-col"
    >
      <div
        class="flex-grow"
      >
        <div
          class=""
          data-testid="flowbite-sidebar-items"
        >
          <ul
            class="mt-4 space-y-2 border-t border-gray-200 pt-4 first:mt-0 first:border-t-0 first:pt-0 dark:border-gray-700"
            data-testid="flowbite-sidebar-item-group"
          >
            <div>
              <li
                class=""
              >
                <a
                  aria-labelledby="flowbite-sidebar-item-_r_2d_"
                  class="flex items-center justify-center rounded-lg p-2 pl-2 text-base font-normal text-primary hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
                  href="/long"
                >
                  <span
                    class="flex-1 whitespace-nowrap px-3"
                    data-testid="flowbite-sidebar-item-content"
                    id="flowbite-sidebar-item-_r_2d_"
                  >
                    <div
                      class="flex w-full items-center justify-between"
                    >
                      <span>
                        This is a very long label that should be rendered correctly
                      </span>
                    </div>
                  </span>
                </a>
              </li>
            </div>
          </ul>
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Sidebar > Snapshot Tests > matches snapshot for sidebar with nested items 1`] = `
<nav
  aria-label="Navigation sidebar"
  class="w-64 flex h-full flex-col"
>
  <div
    class="h-full overflow-y-auto overflow-x-hidden rounded bg-surface-main px-3 py-4 dark:bg-secondary"
  >
    <div
      class="flex h-full flex-col"
    >
      <div
        class="flex-grow"
      >
        <div
          class=""
          data-testid="flowbite-sidebar-items"
        >
          <ul
            class="mt-4 space-y-2 border-t border-gray-200 pt-4 first:mt-0 first:border-t-0 first:pt-0 dark:border-gray-700"
            data-testid="flowbite-sidebar-item-group"
          >
            <div>
              <li>
                <button
                  class="group flex w-full items-center rounded-lg p-2 text-base font-normal text-gray-900 transition duration-75 hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
                  id="flowbite-sidebar-collapse-_r_1j_"
                  title="Settings"
                  type="button"
                >
                  <span
                    class="ml-3 flex-1 whitespace-nowrap text-left"
                    data-testid="flowbite-sidebar-collapse-label"
                  >
                    Settings
                  </span>
                  <svg
                    aria-hidden="true"
                    class="h-6 w-6 transition delay-0 ease-in-out"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 20 20"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
                <ul
                  aria-labelledby="flowbite-sidebar-collapse-_r_1j_"
                  class="space-y-2 py-2"
                  hidden=""
                >
                  <div>
                    <li
                      class=""
                    >
                      <a
                        aria-labelledby="flowbite-sidebar-item-_r_1k_"
                        class="flex items-center justify-center rounded-lg p-2 text-base font-normal text-primary hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700 group w-full pl-8 transition duration-75"
                        href="/profile"
                      >
                        <span
                          class="flex-1 whitespace-nowrap px-3"
                          data-testid="flowbite-sidebar-item-content"
                          id="flowbite-sidebar-item-_r_1k_"
                        >
                          <div
                            class="flex w-full items-center justify-between"
                          >
                            <span>
                              Profile
                            </span>
                          </div>
                        </span>
                      </a>
                    </li>
                  </div>
                  <div>
                    <li
                      class=""
                    >
                      <a
                        aria-labelledby="flowbite-sidebar-item-_r_1l_"
                        class="flex items-center justify-center rounded-lg p-2 text-base font-normal text-primary hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700 group w-full pl-8 transition duration-75"
                        href="/account"
                      >
                        <span
                          class="flex-1 whitespace-nowrap px-3"
                          data-testid="flowbite-sidebar-item-content"
                          id="flowbite-sidebar-item-_r_1l_"
                        >
                          <div
                            class="flex w-full items-center justify-between"
                          >
                            <span>
                              Account
                            </span>
                          </div>
                        </span>
                      </a>
                    </li>
                  </div>
                </ul>
              </li>
            </div>
          </ul>
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Sidebar > Snapshot Tests > matches snapshot for sidebar with nested items with icons 1`] = `
<nav
  aria-label="Navigation sidebar"
  class="w-64 flex h-full flex-col"
>
  <div
    class="h-full overflow-y-auto overflow-x-hidden rounded bg-surface-main px-3 py-4 dark:bg-secondary"
  >
    <div
      class="flex h-full flex-col"
    >
      <div
        class="flex-grow"
      >
        <div
          class=""
          data-testid="flowbite-sidebar-items"
        >
          <ul
            class="mt-4 space-y-2 border-t border-gray-200 pt-4 first:mt-0 first:border-t-0 first:pt-0 dark:border-gray-700"
            data-testid="flowbite-sidebar-item-group"
          >
            <div>
              <li>
                <button
                  class="group flex w-full items-center rounded-lg p-2 text-base font-normal text-gray-900 transition duration-75 hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
                  id="flowbite-sidebar-collapse-_r_1m_"
                  title="Settings"
                  type="button"
                >
                  <div
                    data-testid="mock-icon"
                  >
                    Icon
                  </div>
                  <span
                    class="ml-3 flex-1 whitespace-nowrap text-left"
                    data-testid="flowbite-sidebar-collapse-label"
                  >
                    Settings
                  </span>
                  <svg
                    aria-hidden="true"
                    class="h-6 w-6 transition delay-0 ease-in-out"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 20 20"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
                <ul
                  aria-labelledby="flowbite-sidebar-collapse-_r_1m_"
                  class="space-y-2 py-2"
                  hidden=""
                >
                  <div>
                    <li
                      class=""
                    >
                      <a
                        aria-labelledby="flowbite-sidebar-item-_r_1n_"
                        class="flex items-center justify-center rounded-lg p-2 text-base font-normal text-primary hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700 group w-full pl-8 transition duration-75"
                        href="/profile"
                      >
                        <div
                          data-testid="mock-icon"
                        >
                          Icon
                        </div>
                        <span
                          class="flex-1 whitespace-nowrap px-3"
                          data-testid="flowbite-sidebar-item-content"
                          id="flowbite-sidebar-item-_r_1n_"
                        >
                          <div
                            class="flex w-full items-center justify-between"
                          >
                            <span>
                              Profile
                            </span>
                          </div>
                        </span>
                      </a>
                    </li>
                  </div>
                  <div>
                    <li
                      class=""
                    >
                      <a
                        aria-labelledby="flowbite-sidebar-item-_r_1o_"
                        class="flex items-center justify-center rounded-lg p-2 text-base font-normal text-primary hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700 group w-full pl-8 transition duration-75"
                        href="/account"
                      >
                        <div
                          data-testid="mock-icon"
                        >
                          Icon
                        </div>
                        <span
                          class="flex-1 whitespace-nowrap px-3"
                          data-testid="flowbite-sidebar-item-content"
                          id="flowbite-sidebar-item-_r_1o_"
                        >
                          <div
                            class="flex w-full items-center justify-between"
                          >
                            <span>
                              Account
                            </span>
                          </div>
                        </span>
                      </a>
                    </li>
                  </div>
                </ul>
              </li>
            </div>
          </ul>
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Sidebar > Snapshot Tests > matches snapshot for sidebar with null footer items 1`] = `
<nav
  aria-label="Navigation sidebar"
  class="w-64 flex h-full flex-col"
>
  <div
    class="h-full overflow-y-auto overflow-x-hidden rounded bg-surface-main px-3 py-4 dark:bg-secondary"
  >
    <div
      class="flex h-full flex-col"
    >
      <div
        class="flex-grow"
      />
    </div>
  </div>
</nav>
`;

exports[`Sidebar > Snapshot Tests > matches snapshot for sidebar with null items 1`] = `
<nav
  aria-label="Navigation sidebar"
  class="w-64 flex h-full flex-col"
>
  <div
    class="h-full overflow-y-auto overflow-x-hidden rounded bg-surface-main px-3 py-4 dark:bg-secondary"
  >
    <div
      class="flex h-full flex-col"
    >
      <div
        class="flex-grow"
      />
    </div>
  </div>
</nav>
`;

exports[`Sidebar > Snapshot Tests > matches snapshot for sidebar with special characters in labels 1`] = `
<nav
  aria-label="Navigation sidebar"
  class="w-64 flex h-full flex-col"
>
  <div
    class="h-full overflow-y-auto overflow-x-hidden rounded bg-surface-main px-3 py-4 dark:bg-secondary"
  >
    <div
      class="flex h-full flex-col"
    >
      <div
        class="flex-grow"
      >
        <div
          class=""
          data-testid="flowbite-sidebar-items"
        >
          <ul
            class="mt-4 space-y-2 border-t border-gray-200 pt-4 first:mt-0 first:border-t-0 first:pt-0 dark:border-gray-700"
            data-testid="flowbite-sidebar-item-group"
          >
            <div>
              <li
                class=""
              >
                <a
                  aria-labelledby="flowbite-sidebar-item-_r_29_"
                  class="flex items-center justify-center rounded-lg p-2 pl-2 text-base font-normal text-primary hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
                  href="/special"
                >
                  <span
                    class="flex-1 whitespace-nowrap px-3"
                    data-testid="flowbite-sidebar-item-content"
                    id="flowbite-sidebar-item-_r_29_"
                  >
                    <div
                      class="flex w-full items-center justify-between"
                    >
                      <span>
                        Special & Characters: &lt;&gt;&"'\`
                      </span>
                    </div>
                  </span>
                </a>
              </li>
            </div>
            <div>
              <li
                class=""
              >
                <a
                  aria-labelledby="flowbite-sidebar-item-_r_2a_"
                  class="flex items-center justify-center rounded-lg p-2 pl-2 text-base font-normal text-primary hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
                  href="/unicode"
                >
                  <span
                    class="flex-1 whitespace-nowrap px-3"
                    data-testid="flowbite-sidebar-item-content"
                    id="flowbite-sidebar-item-_r_2a_"
                  >
                    <div
                      class="flex w-full items-center justify-between"
                    >
                      <span>
                        Unicode: éàçüö
                      </span>
                    </div>
                  </span>
                </a>
              </li>
            </div>
          </ul>
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Sidebar > Snapshot Tests > matches snapshot for sidebar with style prop 1`] = `
<nav
  aria-label="Navigation sidebar"
  class="w-64 flex h-full flex-col"
>
  <div
    class="h-full overflow-y-auto overflow-x-hidden rounded bg-surface-main px-3 py-4 dark:bg-secondary"
  >
    <div
      class="flex h-full flex-col"
    >
      <div
        class="flex-grow"
      />
    </div>
  </div>
</nav>
`;

exports[`Sidebar > Snapshot Tests > matches snapshot for sidebar with undefined footer items 1`] = `
<nav
  aria-label="Navigation sidebar"
  class="w-64 flex h-full flex-col"
>
  <div
    class="h-full overflow-y-auto overflow-x-hidden rounded bg-surface-main px-3 py-4 dark:bg-secondary"
  >
    <div
      class="flex h-full flex-col"
    >
      <div
        class="flex-grow"
      />
    </div>
  </div>
</nav>
`;

exports[`Sidebar > Snapshot Tests > matches snapshot for sidebar with undefined items 1`] = `
<nav
  aria-label="Navigation sidebar"
  class="w-64 flex h-full flex-col"
>
  <div
    class="h-full overflow-y-auto overflow-x-hidden rounded bg-surface-main px-3 py-4 dark:bg-secondary"
  >
    <div
      class="flex h-full flex-col"
    >
      <div
        class="flex-grow"
      />
    </div>
  </div>
</nav>
`;

exports[`Sidebar > Snapshot Tests > matches snapshot for sidebar with unicode characters in labels 1`] = `
<nav
  aria-label="Navigation sidebar"
  class="w-64 flex h-full flex-col"
>
  <div
    class="h-full overflow-y-auto overflow-x-hidden rounded bg-surface-main px-3 py-4 dark:bg-secondary"
  >
    <div
      class="flex h-full flex-col"
    >
      <div
        class="flex-grow"
      >
        <div
          class=""
          data-testid="flowbite-sidebar-items"
        >
          <ul
            class="mt-4 space-y-2 border-t border-gray-200 pt-4 first:mt-0 first:border-t-0 first:pt-0 dark:border-gray-700"
            data-testid="flowbite-sidebar-item-group"
          >
            <div>
              <li
                class=""
              >
                <a
                  aria-labelledby="flowbite-sidebar-item-_r_2b_"
                  class="flex items-center justify-center rounded-lg p-2 pl-2 text-base font-normal text-primary hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
                  href="/chinese"
                >
                  <span
                    class="flex-1 whitespace-nowrap px-3"
                    data-testid="flowbite-sidebar-item-content"
                    id="flowbite-sidebar-item-_r_2b_"
                  >
                    <div
                      class="flex w-full items-center justify-between"
                    >
                      <span>
                        你好世界
                      </span>
                    </div>
                  </span>
                </a>
              </li>
            </div>
            <div>
              <li
                class=""
              >
                <a
                  aria-labelledby="flowbite-sidebar-item-_r_2c_"
                  class="flex items-center justify-center rounded-lg p-2 pl-2 text-base font-normal text-primary hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
                  href="/japanese"
                >
                  <span
                    class="flex-1 whitespace-nowrap px-3"
                    data-testid="flowbite-sidebar-item-content"
                    id="flowbite-sidebar-item-_r_2c_"
                  >
                    <div
                      class="flex w-full items-center justify-between"
                    >
                      <span>
                        こんにちは世界
                      </span>
                    </div>
                  </span>
                </a>
              </li>
            </div>
          </ul>
        </div>
      </div>
    </div>
  </div>
</nav>
`;
